--- a/index.html
+++ b/index.html
@@ -46,18 +46,12 @@
     ================================================== -->
     <header class="s-header">
         <div class="row">
-
-            <div class="s-header__logo">
-                <a href="index.html">
-                    <img src="images/logo.svg" alt="Homepage">
-                </a>
-            </div>
-
             <nav class="s-header__nav">
                 <ul>
                     <li class="current"><a class="smoothscroll" href="#home">主页</a></li>
                     <li><a class="smoothscroll" href="#rules">规则</a></li>
                     <li><a class="smoothscroll" href="#soup">汤面和汤底</a></li>
+                    <li><a class="smoothscroll" href="#cook">煮汤</a></li>
                 </ul>
             </nav>
 
@@ -71,7 +65,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width="3000" data-natural-height="2000">
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/plage.jpg" data-natural-width="3000" data-natural-height="2000">
 
         <div class="s-home__content">
 
@@ -81,7 +75,7 @@
                     <div class="row">
                         <div class="column large-12 s-home__slide-text">
                             <h2>
-                              欢迎来到小岛上，客官要要一碗海龟吗?
+                            欢迎来到小岛上，要来一碗海龟吗?
                             </h2>
                             <p>
                             下面的汤不热请尽情享用
@@ -119,7 +113,7 @@
                   <div class="row">
                       <div class="column large-12 s-home__slide-text">
                           <h3 style="color:	#ee6363">
-                            游戏规则
+                          游戏规则
                           </h3>
                           <h4 style="color:	white">
                           出题者提出一个难以理解的事件，其他参与者可以提出任何问题以试图缩小范围并找出事件背后真正的原因，但出题者仅能则以“是（对）”、“不是（不对）”或“没有关系”来回答问题
@@ -133,7 +127,7 @@
 
       </section> <!-- end s-home -->
 
-      <section id="soup" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width="3000" data-natural-height="2000">
+      <section id="soup" class="s-home target-section" data-parallax="scroll">
 
         <div class="s-home__content">
 
@@ -143,10 +137,10 @@
                     <div class="row">
                         <div class="column large-12 s-home__slide-text">
                             <h3 style="color:	#ee6363">
-                              游戏规则
+                            汤面
                             </h3>
                             <h4 style="color:	white">
-                            出题者提出一个难以理解的事件，其他参与者可以提出任何问题以试图缩小范围并找出事件背后真正的原因，但出题者仅能则以“是（对）”、“不是（不对）”或“没有关系”来回答问题
+                            喝汤吧
                             </h4>
                         </div>
                     </div>
@@ -156,6 +150,31 @@
 
 
         </section> <!-- end s-home -->
+
+
+        <section id="cook" class="s-home target-section" data-parallax="scroll">
+
+          <div class="s-home__content">
+
+              <div class="s-home__slider">
+
+                  <div class="s-home__slide s-home__slide--1">
+                      <div class="row">
+                          <div class="column large-12 s-home__slide-text">
+                              <h3 style="color:	#ee6363">
+                              汤面
+                              </h3>
+                              <h4 style="color:	white">
+                              喝汤吧
+                              </h4>
+                          </div>
+                      </div>
+                  </div> <!-- end s-home__slide -->
+
+              </div> <!-- end s-home__slider -->
+
+
+          </section> <!-- end s-home -->
 
     <!-- CTA
     <section class="s-cta ss-dark">
